2025-09-16T01:15:07Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17751301654 # 768
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-16
* notice: last 14d: unq all: 2 11
* notice: prev accum: outdated-unq outdated-all / unq all: 1095 1575 / 1105 1585
* notice: next accum: outdated-unq outdated-all / unq all: 1095 1575 / 1106 1586
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-09-15]

2025-09-15T01:21:03Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17719485440 # 767
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-15
* notice: last 14d: unq all: 2 10
* notice: prev accum: outdated-unq outdated-all / unq all: 1094 1574 / 1104 1584
* notice: next accum: outdated-unq outdated-all / unq all: 1095 1575 / 1105 1585
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-09-01] / [2025-09-14]

2025-09-14T01:20:39Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17704524385 # 766
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-14
* notice: last 14d: unq all: 2 10
* notice: prev accum: outdated-unq outdated-all / unq all: 1090 1570 / 1103 1583
* notice: next accum: outdated-unq outdated-all / unq all: 1094 1574 / 1104 1584
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-08-30 2025-08-31] / [2025-09-13]

2025-09-12T01:13:53Z: