@@ -1,3 +1,12 @@
+2025-09-17T01:14:44Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17783571046 # 769
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-17
+* notice: last 14d: unq all: 4 12
+* notice: prev accum: outdated-unq outdated-all / unq all: 1095 1575 / 1106 1586
+* notice: next accum: outdated-unq outdated-all / unq all: 1096 1576 / 1108 1588
+* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
+* notice: removed / changed dates: [2025-09-03] / [2025-09-16]
+
 2025-09-16T01:15:07Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17751301654 # 768
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-16
